Working on charts

--- a/forecast_d3.html
+++ b/forecast_d3.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="chart-container">
-            <canvas id="forecastchart" width="1000px" height="500"></canvas>
+            <div id="forecastchart" ></div>
         </div>
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
         <script src="https://d3js.org/d3.v4.min.js"></script>
