--- a/forecast_d3_waves.html
+++ b/forecast_d3_waves.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta charset="UTF-8">  
-        <link rel="stylesheet" href="charts_d3.css">
+        <link rel="stylesheet" href="charts_d3_waves.css">
     </head>
     <body>
         <div class="chart-container">
@@ -9,7 +9,7 @@
         </div>
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
         <script src="https://d3js.org/d3.v4.min.js"></script>
-        <script src="js/forecastchart_d3.js"></script>
+        <script src="js/forecastchart_d3_waves.js"></script>
         
     </body>
 </html>
