--- a/tideschart_d3.html
+++ b/tideschart_d3.html
@@ -8,8 +8,16 @@
             <div id="forecastchart" ></div>
         </div>
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-        <script src="https://d3js.org/d3.v4.min.js"></script>
-		<script src="js/tidechart_d3.js"></script>
+		<script src="https://d3js.org/d3.v4.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+		<script src="https://momentjs.com/downloads/moment-timezone-with-data.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/locale/es.js"></script>
+		<!-- <script src="http://momentjs.com/downloads/moment-timezone.js"></script>	
+		<script src="http://momentjs.com/downloads/moment-timezone-with-data-2012-2022.js"></script>
+		 -->
+		 <!-- <script src="moment.js"></script>
+<script src="moment-timezone-with-data.js"></script> -->
+		<script src="js/tidechart_d3.js"></script>	
         
     </body>
 </html>
