--- a/forecast_d3_waves.html
+++ b/forecast_d3_waves.html
@@ -9,7 +9,10 @@
         </div>
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
         <script src="https://d3js.org/d3.v4.min.js"></script>
-        <script src="js/forecastchart_d3_waves.js"></script>
+		<script src="js/forecastchart_d3_waves.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+		<script src="https://momentjs.com/downloads/moment-timezone-with-data.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/locale/es.js"></script>
         
     </body>
 </html>
