--- a/forecast_d3_wind.html
+++ b/forecast_d3_wind.html
@@ -10,6 +10,9 @@
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
         <script src="https://d3js.org/d3.v4.min.js"></script>
 		<script src="js/forecastchart_d3_wind.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+		<script src="https://momentjs.com/downloads/moment-timezone-with-data.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/locale/es.js"></script>
         
     </body>
 </html>
